--- a/source/catalog.html
+++ b/source/catalog.html
@@ -51,11 +51,11 @@
               </a>
             </li>
             <li class="category__list-item catalog__list-item">
-              <a href="./toys.html" class="category__item_link" tabindex="0">
+              <a href="./toys.html" class="category__link" tabindex="0">
                 <img
                   src="../img/images/holidayShop.jpg"
                   alt="Holiday shop image"
-                  class="category_img"
+                  class="category__img"
                 />
                 <div class="category__name font-title">
                   <p>Holiday shop</p>
@@ -75,7 +75,7 @@
               </a>
             </li>
             <li class="category__list-item catalog__list-item">
-              <a href="./toys.html" class="category__item-link" tabindex="0">
+              <a href="./toys.html" class="category__link" tabindex="0">
                 <img
                   src="../img/images/accessories.jpg"
                   alt="Accessories image"
@@ -87,7 +87,7 @@
               </a>
             </li>
             <li class="category__list-item catalog__list-item">
-              <a href="./toys.html" class="category__item-link" tabindex="0">
+              <a href="./toys.html" class="category__link" tabindex="0">
                 <img
                   src="../img/images/sale.jpg"
                   alt="Sale image"
