--- a/source/index.html
+++ b/source/index.html
@@ -77,7 +77,7 @@
               </a>
             </li>
             <li class="category__list-item">
-              <a href="./toys.html" class="category__link" tabindex="0">
+              <a href="../toys.html" class="category__link" tabindex="0">
                 <img
                   src="../img/images/holidayShop.jpg"
                   alt="Holiday shop image"
@@ -89,9 +89,9 @@
               </a>
             </li>
             <li class="category__list-item">
-              <a href="./toys.html" class="category__link" tabindex="0">
+              <a href="../toys.html" class="category__link" tabindex="0">
                 <img
-                  src="./img/images/toys.jpg"
+                  src="../img/images/toys.jpg"
                   alt="Toys image"
                   class="category__img"
                 />
@@ -101,9 +101,9 @@
               </a>
             </li>
             <li class="category__list-item">
-              <a href="./toys.html" class="category__link" tabindex="0">
+              <a href="../toys.html" class="category__link" tabindex="0">
                 <img
-                  src="./img/images/accessories.jpg"
+                  src="../img/images/accessories.jpg"
                   alt="Accessories image"
                   class="category__img"
                 />
@@ -113,7 +113,7 @@
               </a>
             </li>
             <li class="category__list-item">
-              <a href="./toys.html" class="category__link" tabindex="0">
+              <a href="../toys.html" class="category__link" tabindex="0">
                 <img
                   src="../img/images/sale.jpg"
                   alt="Sale image"
@@ -125,7 +125,7 @@
               </a>
             </li>
             <li class="category__list-item">
-              <a href="./toys.html" class="category__link" tabindex="0">
+              <a href="../toys.html" class="category__link" tabindex="0">
                 <img
                   src="../img/images/apparelAdults.jpg"
                   alt="Apparel adults image"
@@ -154,7 +154,7 @@
         <section class="service">
           <div class="service__picture">
             <img
-              src="./img/images/woman.jpg"
+              src="../img/images/woman.jpg"
               class="service__img"
               alt="lady in dress"
             />
@@ -191,24 +191,23 @@
                 to thank!
               </p>
             </div>
-
-            <a href="#" class="button learn_more_button">Learn more</a>
+            <a href="#" class="button">Learn more</a>
           </div>
         </section>
         <section class="partners">
-          <h2 class="parters__title">Partners</h2>
+          <h2 class="hidden-item">Partners</h2>
           <ul class="partners__list">
             <li class="partners__list-item">
-              <img src="./img/images/mailRU.png" alt="mail.ru logo" />
+              <img src="../img/images/mailRU.png" alt="mail.ru logo" />
             </li>
             <li class="partners__list-item">
-              <img src="./img/images/apple.png" alt="Apple logo" />
+              <img src="../img/images/apple.png" alt="Apple logo" />
             </li>
             <li class="partners__list-item">
-              <img src="./img/images/eltexLogo.png" alt="Eltex logo" />
+              <img src="../img/images/eltexLogo.png" alt="Eltex logo" />
             </li>
             <li class="partners__list-item">
-              <img src="./img/images/owoxLogo.png" alt="Owox logo" />
+              <img src="../img/images/owoxLogo.png" alt="Owox logo" />
             </li>
           </ul>
         </section>
