ДЗ анимация на hover

--- a/source/index.html
+++ b/source/index.html
@@ -24,7 +24,7 @@
     <link href="css/style.min.css" rel="stylesheet" />
     <!-- endbuild -->
   </head>
-  <body>
+  <body class="font-content">
     @@include('blocks/header.html')
     <main class="main">
       <div class="page-container">
