--- a/source/animation.html
+++ b/source/animation.html
@@ -40,7 +40,7 @@
       </div>
       <section class="animation">
         <img
-          src="../../img/images/animation/town.png"
+          src="../../img/images/animation/downtown.png"
           alt="Town"
           class="animation__town"
         />
@@ -85,9 +85,29 @@
           class="animation__car1"
         />
         <img
+          src="../../img/images/animation/car1-wheel.png"
+          alt="Car 1 wheel"
+          class="animation__car1-wheel-1"
+        />
+        <img
+          src="../../img/images/animation/car1-wheel.png"
+          alt="Car 1 wheel"
+          class="animation__car1-wheel-2"
+        />
+        <img
           src="../../img/images/animation/car2.png"
           alt="Car 2"
           class="animation__car2"
+        />
+        <img
+          src="../../img/images/animation/car2-wheel.png"
+          alt="Car 2 wheel"
+          class="animation__car2-wheel-1"
+        />
+        <img
+          src="../../img/images/animation/car2-wheel.png"
+          alt="Car 2 wheel"
+          class="animation__car2-wheel-2"
         />
         <img
           src="../../img/images/animation/car3.png"
@@ -95,9 +115,29 @@
           class="animation__car3"
         />
         <img
+          src="../../img/images/animation/car2-wheel.png"
+          alt="Car 3 wheel"
+          class="animation__car3-wheel-1"
+        />
+        <img
+          src="../../img/images/animation/car2-wheel.png"
+          alt="Car 3 wheel"
+          class="animation__car3-wheel-2"
+        />
+        <img
           src="../../img/images/animation/car4.png"
           alt="Car 4"
           class="animation__car4"
+        />
+        <img
+          src="../../img/images/animation/car4-wheel.png"
+          alt="Car 4 wheel"
+          class="animation__car4-wheel-1"
+        />
+        <img
+          src="../../img/images/animation/car4-wheel.png"
+          alt="Car 4 wheel"
+          class="animation__car4-wheel-2"
         />
         <img
           src="../../img/images/animation/lantern-gray.png"
@@ -105,9 +145,14 @@
           class="animation__lantern"
         />
         <img
+          src="../../img/images/animation/lantern-gray.png"
+          alt="Lantern gray"
+          class="animation__lantern2"
+        />
+        <img
           src="../../img/images/animation/lanterns-color.png"
           alt="Lantern color"
-          class="animation__lantern"
+          class="animation__lantern-color"
         />
         <img
           src="../../img/images/animation/taxi.png"
@@ -115,9 +160,29 @@
           class="animation__taxi"
         />
         <img
+          src="../../img/images/animation/taxi-wheel.png"
+          alt="Taxi wheel"
+          class="animation__taxi-wheel-1 animation__taxi-wheels"
+        />
+        <img
+          src="../../img/images/animation/taxi-wheel.png"
+          alt="Taxi wheel"
+          class="animation__taxi-wheel-2 animation__taxi-wheels"
+        />
+        <img
           src="../../img/images/animation/woman.png"
           alt="Woman"
           class="animation__woman"
+        />
+        <img
+          src="../../img/images/animation/woman-hand.png"
+          alt="Woman hand"
+          class="animation__woman-hand"
+        />
+        <img
+          src="../../img/images/animation/skirt.png"
+          alt="Woman skirt"
+          class="animation__skirt"
         />
         <img
           src="../../img/images/animation/man.png"
@@ -129,6 +194,20 @@
           alt="Man hand"
           class="animation__man-hand"
         />
+        <div class="animation__message-1">
+          <p class="animation__message-cloud-left">
+            Джесси, смотри, такси едет!
+          </p>
+        </div>
+        <div class="animation__message-2">
+          <p class="animation__message-cloud-right">Эй! Такси! Такси!</p>
+        </div>
+        <div class="animation__message-3">
+          <p class="animation__message-cloud-left">Я вообще-то не за вами..</p>
+        </div>
+        <div class="animation__message-4">
+          <p class="animation__message-cloud-right">Давай, пошуршал</p>
+        </div>
       </section>
     </main>
     @@include('blocks/footer.html')
