Подготовлен адаптив всех страниц

--- a/source/animation.html
+++ b/source/animation.html
@@ -206,7 +206,7 @@
           <p class="animation__message-cloud-left">Я вообще-то не за вами..</p>
         </div>
         <div class="animation__message-4">
-          <p class="animation__message-cloud-right">Давай, пошуршал</p>
+          <p class="animation__message-cloud-right">Ок, ждём ещё</p>
         </div>
       </section>
     </main>
