--- a/source/catalog.html
+++ b/source/catalog.html
@@ -31,81 +31,129 @@
           <h1 class="main-title font-title">Category Products</h1>
           <ul class="breadcrump font-decor">
             <li class="breadcrump__item">
-              <a href="../index.html">Home</a>
+              <a href="../index.html" class="breadcrump__link">Home</a>
             </li>
             <li class="breadcrump__item">
-              <a href="./catalog.html">Catalog</a>
+              <a href="./catalog.html" class="breadcrump__link">Catalog</a>
             </li>
           </ul>
           <ul class="category__list catalog__list">
             <li class="category__list-item catalog__list-item">
               <a href="./toys.html" class="category__link" tabindex="0">
-                <img
-                  src="../img/images/apparelKids.jpg"
-                  alt="Apparel kids image"
-                  class="category__img"
-                />
-                <div class="category__name font-title">
+                <picture class="category__picture">
+                  <source
+                    srcset="
+                      ../img/images/apparelKids-1x.jpg 1x,
+                      ../img/images/apparelKids-2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="../img/images/apparelKids-1x.jpg"
+                    alt="Apparel kids image"
+                    class="category__img"
+                  />
+                </picture>
+                <div class="category__name catalog__name font-title">
                   <p>Apparel kids</p>
                 </div>
               </a>
             </li>
             <li class="category__list-item catalog__list-item">
               <a href="./toys.html" class="category__link" tabindex="0">
-                <img
-                  src="../img/images/holidayShop.jpg"
-                  alt="Holiday shop image"
-                  class="category__img"
-                />
-                <div class="category__name font-title">
+                <picture class="category__picture">
+                  <source
+                    srcset="
+                      ../img/images/holidayShop-1x.jpg 1x,
+                      ../img/images/holidayShop-2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="../img/images/holidayShop-1x.jpg"
+                    alt="Holiday shop image"
+                    class="category__img"
+                  />
+                </picture>
+                <div class="category__name catalog__name font-title">
                   <p>Holiday shop</p>
                 </div>
               </a>
             </li>
             <li class="category__list-item catalog__list-item">
               <a href="./toys.html" class="category__link" tabindex="0">
-                <img
-                  src="../img/images/toys.jpg"
-                  alt="Toys image"
-                  class="category__img"
-                />
-                <div class="category__name font-title">
+                <picture class="category__picture">
+                  <source
+                    srcset="
+                      ../img/images/toys-1x.jpg 1x,
+                      ../img/images/toys-2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="../img/images/toys-1x.jpg"
+                    alt="Toys image"
+                    class="category__img"
+                  />
+                </picture>
+                <div class="category__name catalog__name font-title">
                   <p>Toys</p>
                 </div>
               </a>
             </li>
             <li class="category__list-item catalog__list-item">
               <a href="./toys.html" class="category__link" tabindex="0">
-                <img
-                  src="../img/images/accessories.jpg"
-                  alt="Accessories image"
-                  class="category__img"
-                />
-                <div class="category__name font-title">
+                <picture class="category__picture">
+                  <source
+                    srcset="
+                      ../img/images/accessories-1x.jpg 1x,
+                      ../img/images/accessories-2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="../img/images/accessories-1x.jpg"
+                    alt="Accessories image"
+                    class="category__img"
+                  />
+                </picture>
+                <div class="category__name catalog__name font-title">
                   <p>Accessories</p>
                 </div>
               </a>
             </li>
             <li class="category__list-item catalog__list-item">
               <a href="./toys.html" class="category__link" tabindex="0">
-                <img
-                  src="../img/images/sale.jpg"
-                  alt="Sale image"
-                  class="category__img"
-                />
-                <div class="category__name font-title">
+                <picture class="category__picture">
+                  <source
+                    srcset="
+                      ../img/images/sale-1x.jpg 1x,
+                      ../img/images/sale-2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="../img/images/sale-1x.jpg"
+                    alt="Sale image"
+                    class="category__img"
+                  />
+                </picture>
+                <div class="category__name catalog__name font-title">
                   <p>Sale</p>
                 </div>
               </a>
             </li>
             <li class="category__list-item catalog__list-item">
               <a href="./toys.html" class="category__link" tabindex="0">
-                <img
-                  src="../img/images/apparelAdults.jpg"
-                  alt="Apparel adults image"
-                  class="category__img"
-                />
-                <div class="category__name font-title">
+                <picture class="category__picture">
+                  <source
+                    srcset="
+                      ../img/images/apparelAdults-1x.jpg 1x,
+                      ../img/images/apparelAdults-2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="../img/images/apparelAdults-1x.jpg"
+                    alt="Apparel adults image"
+                    class="category__img"
+                  />
+                </picture>
+                <div class="category__name catalog__name font-title">
                   <p>Apparel adults</p>
                 </div>
               </a>
@@ -118,7 +166,7 @@
             <p>
               Interactive doll Zapf Creation Baby Born Sister can drink from a
               bottle and almost really cry. You can even bathe her, just like a
-              littlesister.
+              little sister.
             </p>
             <p>
               A toy with a height of 43 cm bends its knees, the head rotates, it
