--- a/source/blog.html
+++ b/source/blog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device_width, initial_scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -41,7 +41,11 @@
           <ul class="articles__list">
             <li class="articles__list-item">
               <article class="articles__item">
-                <img src="../img/images/legoMess.jpg" alt="lego img" />
+                <img
+                  src="../img/images/legoMess.jpg"
+                  class="articles__img"
+                  alt="lego img"
+                />
                 <span class="articles__date">23rd August 2018</span>
                 <h2 class="articles__title font-title">
                   Top 5 fastest growing it service companies in philly
@@ -58,6 +62,7 @@
               <article class="articles__item">
                 <img
                   src="../img/images/animalsToys.jpg"
+                  class="articles__img"
                   alt="animals toys img"
                 />
                 <span class="articles__date">23rd August 2018</span>
@@ -73,6 +78,7 @@
               <article class="articles__item">
                 <img
                   src="../img/images/organizedToys.jpg"
+                  class="articles__img"
                   alt="organized toys img"
                 />
                 <span class="articles__date">23rd August 2018</span>
@@ -89,7 +95,11 @@
             </li>
             <li class="articles__list-item">
               <article class="articles__item">
-                <img src="../img/images/buzLighter.jpg" alt="Buz-lighter img" />
+                <img
+                  src="../img/images/buzLighter.jpg"
+                  class="articles__img"
+                  alt="Buz-lighter img"
+                />
                 <span class="articles__date">23rd August 2018</span>
                 <h2 class="articles__title font-title">Best financial</h2>
                 <p>
@@ -103,6 +113,7 @@
               <article class="articles__item">
                 <img
                   src="../img/images/princessToy.jpg"
+                  class="articles__img"
                   alt="princess toy img"
                 />
                 <span class="articles__date">23rd August 2018</span>
@@ -119,7 +130,11 @@
             </li>
             <li class="articles__list-item">
               <article class="articles__item">
-                <img src="../img/images/dice.jpg" alt="dice img" />
+                <img
+                  src="../img/images/dice.jpg"
+                  class="articles__img"
+                  alt="dice img"
+                />
                 <span class="articles__date">23rd August 2018</span>
                 <h2 class="articles__title font-title">
                   Top 5 fastest growing it service companies in philly
