--- a/source/svg.html
+++ b/source/svg.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <meta name="google" content="notranslate" />
     <meta name="format-detection" content="telephone=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
