--- a/source/toys.html
+++ b/source/toys.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device_width, initial_scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -30,13 +30,13 @@
         <h1 class="main-title font-title">Toy for kids</h1>
         <ul class="breadcrump font-decor">
           <li class="breadcrump__item">
-            <a href="../index.html">Home</a>
+            <a href="../index.html" class="breadcrump__link">Home</a>
           </li>
           <li class="breadcrump__item">
-            <a href="./catalog.html">Catalog</a>
+            <a href="./catalog.html" class="breadcrump__link">Catalog</a>
           </li>
           <li class="breadcrump__item">
-            <a href="./toys.html">Toys</a>
+            <a href="./toys.html" class="breadcrump__link">Toys</a>
           </li>
         </ul>
       </div>
@@ -166,7 +166,7 @@
               <article class="product">
                 <img
                   src="../img/images/sharkBag.png"
-                  class="product__img"
+                  class="toys-catalog__img"
                   alt="sharky img"
                 />
                 <div class="product__link font-title">
@@ -180,7 +180,7 @@
               <article class="product">
                 <img
                   src="../img/images/brass.png"
-                  class="product__img"
+                  class="toys-catalog__img"
                   alt="sharky img"
                 />
                 <h2 class="product__title">BRASS DECO FRAMES</h2>
@@ -191,7 +191,7 @@
               <article class="product">
                 <img
                   src="../img/images/cibo.png"
-                  class="product__img"
+                  class="toys-catalog__img"
                   alt="sharky img"
                 />
                 <h2 class="product__title">CIBO FULL APRON</h2>
@@ -202,7 +202,7 @@
               <article class="product">
                 <img
                   src="../img/images/gatcha.png"
-                  class="product__img"
+                  class="toys-catalog__img"
                   alt="sharky img"
                 />
                 <h2 class="product__title">GATCHA GATCHA GUMBALL MACHINE</h2>
@@ -213,7 +213,7 @@
               <article class="product">
                 <img
                   src="../img/images/candle.png"
-                  class="product__img"
+                  class="toys-catalog__img"
                   alt="sharky img"
                 />
                 <h2 class="product__title">CHRISTMAS ADVENT SCENTED CANDLE</h2>
@@ -224,7 +224,7 @@
               <article class="product">
                 <img
                   src="../img/images/tangle.png"
-                  class="product__img"
+                  class="toys-catalog__img"
                   alt="sharky img"
                 />
                 <h2 class="product__title">TANGLE SPINNING TEA LIGHT</h2>
