--- a/source/svg.html
+++ b/source/svg.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital@1&family=Montserrat:wght@200;700&family=Open+Sans:wght@400;700&family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <title>DLK Animation</title>
+    <title>DLK SVG</title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <script>
@@ -29,22 +29,17 @@
     @@include('blocks/header.html')
     <main class="main">
       <div class="page-container">
-        <h1 class="main-title font-title">Animation scene</h1>
+        <h1 class="main-title font-title">SVG Animation</h1>
         <ul class="breadcrump font-decor">
           <li class="breadcrump__item">
             <a href="../index.html" class="breadcrump__link">Home</a>
           </li>
           <li class="breadcrump__item">
-            <a href="./animation.html" class="breadcrump__link">Animation</a>
+            <a href="./animation.html" class="breadcrump__link">SVG</a>
           </li>
         </ul>
         <section class="svg">
-          <svg
-            viewBox="20 20 418 351"
-            width="418px"
-            height="351px"
-            xmlns="http://www.w3.org/2000/svg"
-          >
+          <svg viewBox="20 20 418 351" xmlns="http://www.w3.org/2000/svg">
             <defs>
               <filter
                 id="filter0_d_611_4410"
