--- a/source/bootstrap.html
+++ b/source/bootstrap.html
@@ -9,10 +9,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
+    <link
       href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital@1&family=Lato:wght@700&family=Montserrat:wght@200;700&family=Open+Sans:wght@400;700&family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <title>DLK Blog</title>
+    <title>DLK Bootstrap</title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <script>
@@ -22,34 +33,35 @@
     </script>
     <!-- Favicon -->
     <!-- build:css -->
+    <link
+      href="/node_modules/bootstrap/dist/css/bootstrap.css"
+      rel="stylesheet"
+    />
     <link href="css/style.min.css" rel="stylesheet" />
     <!-- endbuild -->
   </head>
   <body class="font-content">
     @@include('blocks/header.html')
-    <main class="main">
-      <div class="page-container">
-        <section class="articles">
-          <h1 class="main-title font-title">Blog</h1>
-          <ul class="breadcrump font-decor">
-            <li class="breadcrump__item">
-              <a href="../index.html" class="breadcrump__link">Home</a>
+    <main>
+      <div class="container">
+        <section>
+          <h1 class="font-title">Blog</h1>
+          <ul class="font-decor">
+            <li>
+              <a href="../index.html">Home</a>
             </li>
-            <li class="breadcrump__item">
-              <a href="./blog.html" class="breadcrump__link">Blog</a>
+            <li>
+              <a href="./blog.html">Blog</a>
             </li>
           </ul>
 
-          <ul class="articles__list">
-            <li class="articles__list-item">
-              <article class="articles__item">
-                <img
-                  src="../img/images/legoMess.jpg"
-                  class="articles__img"
-                  alt="lego img"
-                />
-                <span class="articles__date">23rd August 2018</span>
-                <h2 class="articles__title font-title">
+          <ul>
+            <li>
+              <article>
+                <img src="../img/images/legoMess.jpg" alt="lego img" />
+                <span>23rd August 2018</span>
+                <button class="btn btn-primary">ПРИВЕТ</button>
+                <h2 class="h1 font-title btn btn-primary">
                   Top 5 fastest growing it service companies in philly
                 </h2>
                 <p>
@@ -60,15 +72,14 @@
                 </p>
               </article>
             </li>
-            <li class="articles__list-item">
-              <article class="articles__item">
+            <li>
+              <article>
                 <img
                   src="../img/images/animalsToys.jpg"
-                  class="articles__img"
                   alt="animals toys img"
                 />
-                <span class="articles__date">23rd August 2018</span>
-                <h2 class="articles__title font-title">Best financial</h2>
+                <span>23rd August 2018</span>
+                <h2 class="font-title">Best financial</h2>
                 <p>
                   Direct Line Development is honored to be recognized as one of
                   the Top 100 Fastest Growing Companies 2019 in Philadelphia,
@@ -76,15 +87,14 @@
                 </p>
               </article>
             </li>
-            <li class="articles__list-item">
-              <article class="articles__item">
+            <li>
+              <article>
                 <img
                   src="../img/images/organizedToys.jpg"
-                  class="articles__img"
                   alt="organized toys img"
                 />
-                <span class="articles__date">23rd August 2018</span>
-                <h2 class="articles__title font-title">
+                <span>23rd August 2018</span>
+                <h2 class="font-title">
                   Company logo or brand identity: which one is more important?
                   brand identity
                 </h2>
@@ -95,15 +105,11 @@
                 </p>
               </article>
             </li>
-            <li class="articles__list-item">
-              <article class="articles__item">
-                <img
-                  src="../img/images/buzLighter.jpg"
-                  class="articles__img"
-                  alt="Buz-lighter img"
-                />
-                <span class="articles__date">23rd August 2018</span>
-                <h2 class="articles__title font-title">Best financial</h2>
+            <li>
+              <article>
+                <img src="../img/images/buzLighter.jpg" alt="Buz-lighter img" />
+                <span>23rd August 2018</span>
+                <h2 class="font-title">Best financial</h2>
                 <p>
                   Direct Line Development is honored to be recognized as one of
                   the Top 100 Fastest Growing Companies 2019 in Philadelphia,
@@ -111,15 +117,14 @@
                 </p>
               </article>
             </li>
-            <li class="articles__list-item">
-              <article class="articles__item">
+            <li>
+              <article>
                 <img
                   src="../img/images/princessToy.jpg"
-                  class="articles__img"
                   alt="princess toy img"
                 />
-                <span class="articles__date">23rd August 2018</span>
-                <h2 class="articles__title font-title">
+                <span>23rd August 2018</span>
+                <h2 class="font-title">
                   Company logo or brand identity: which one is more important?
                   brand identity
                 </h2>
@@ -130,15 +135,11 @@
                 </p>
               </article>
             </li>
-            <li class="articles__list-item">
-              <article class="articles__item">
-                <img
-                  src="../img/images/dice.jpg"
-                  class="articles__img"
-                  alt="dice img"
-                />
-                <span class="articles__date">23rd August 2018</span>
-                <h2 class="articles__title font-title">
+            <li>
+              <article>
+                <img src="../img/images/dice.jpg" alt="dice img" />
+                <span>23rd August 2018</span>
+                <h2 class="font-title">
                   Top 5 fastest growing it service companies in philly
                 </h2>
                 <p>
@@ -151,26 +152,22 @@
             </li>
           </ul>
           <div class="page-nav">
-            <a href="#" class="page-nav__back"></a>
-            <ul class="page-nav__list">
-              <li class="page-nav__list-item">
-                <a
-                  href="#"
-                  class="page-nav__number font-title page-nav_active-page"
-                  >1</a
-                >
+            <a href="#"></a>
+            <ul>
+              <li>
+                <a href="#" class="font-title">1</a>
               </li>
-              <li class="page-nav__list-item">
-                <a href="#" class="page-nav__number font-title">2</a>
+              <li>
+                <a href="#" class="font-title">2</a>
               </li>
-              <li class="page-nav__list-item">
-                <a href="#" class="page-nav__number font-title">3</a>
+              <li>
+                <a href="#" class="font-title">3</a>
               </li>
-              <li class="page-nav__list-item">
-                <a href="#" class="page-nav__number font-title">4</a>
+              <li>
+                <a href="#" class="font-title">4</a>
               </li>
             </ul>
-            <a href="#" class="page-nav__forward"></a>
+            <a href="#"></a>
           </div>
         </section>
       </div>
